--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,12 @@
 # If your site is in 'https', then make sure your base url isn't written using 'http' otherwise your sitemap would
 # contain http (as opposeed to https) URLs. This would affect Google indexing of your URLs.
-baseURL: "https://maxchen0102.github.io/Cwebsite/"
+
+# the URL is for the github pages
+# baseURL: "https://maxchen0102.github.io/Cwebsite/"  
+
+# the URL is for the vercel app
+baseURL: "https://cwebsite-pl5wskk8g-chris-projects-ca2187d7.vercel.app/"
+
 title: PaperMod
 copyright: "© [PaperMod Contributors](https://github.com/adityatelange/hugo-PaperMod/graphs/contributors)"
 # paginate: 5  # Deprecated in Hugo v0.128.0
