--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
     "build": {
       "env": {
-        "HUGO_VERSION": "0.145.0"
+        "HUGO_VERSION": "0.145.0",
+        "HUGO_ENV": "production"
       }
     }
   }
