--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,6 @@
 # the URL is for the github pages, because it will generate the route for every page of the website
-# baseURL: "https://leetcode666.com/"  # 自定義網域使用
+
+baseURL: "https://leetcode666.com/"  # 自定義網域使用
 # baseURL: "https://maxchen0102.github.io/Cwebsite/"  # GitHub Pages 使用
 
 # Google Analytics ID (G-XXXXXXXXXX 或 UA-XXXXXXXXX-X)
@@ -8,7 +9,7 @@ googleAnalytics: "G-QNR8ZBX7XN"
 title: Chris's Website
 copyright: "© 2020-2025 程式思維 | All Rights Reserved."
 pagination:
-  pagerSize: 10 # the number of posts to show on the homepage
+  pagerSize: 10 # the number of posts to sho2 on the homepage
 theme: [hugo-PaperMod]
 
 
